--- a/refs.bib
+++ b/refs.bib
@@ -27,12 +27,13 @@
     number = {5},
     doi = {10.1007/s00373-016-1677-z}
 }
-@article{ange21,
+@inproceedings{ange21,
     title = {Location domination for generalized friendship graphs analytics},
     author = {D. Angel and I. A. Arputhamary and K. Ezhilarasi},
-    journal = {Proceedings of 2021 5th International Conference on Computing Methodologies and Communication (ICCMC)},
+    booktitle = {2021 5th International Conference on Computing Methodologies and Communication (ICCMC)},
     year = {2021},
     pages = {865--868},
+    address = {Erode, India},
     doi = {10.1109/ICCMC51019.2021.9418258}
 }
 @article{arau11,
@@ -440,6 +441,157 @@
     pages = {1--16},
     doi = {10.4230/LIPIcs.ISAAC.2020.24}
 }
+@article{honk04e,
+    title = {Codes for identification in the king lattice},
+    author = {I. Honkala and T. Laihonen},
+    journal = {Graphs and Combinatorics},
+    year = {2003},
+    pages = {505--516},
+    volume = {19},
+    doi = {10.1007/s00373-003-0531-2}
+}
+@article{gonc13,
+    title = {Locally identifying coloring in bounded expansion classes of graphs},
+    author = {D. Gon\c calves and A. Parreau and A. Pinlou},
+    journal = {Discrete Applied Mathematics},
+    year = {2013},
+    pages = {2946--2951},
+    volume = {161},
+    doi = {10.1016/j.dam.2013.07.003}
+}
+@article{fouc15,
+    title = {Decision and approximation complexity for identifying codes and locating-dominating sets in restricted graph classes},
+    author = {F. Foucaud},
+    journal = {Journal of Discrete Algorithms},
+    year = {2015},
+    pages = {48--68},
+    volume = {31},
+    doi = {10.1016/j.jda.2014.08.004}
+}
+@article{cuki13,
+    title = {New bounds on the minimum density of an identifying code for the infinite hexagonal grid},
+    author = {A. Cukierman and G. Yu},
+    journal = {Discrete Applied Mathematics},
+    year = {2013},
+    pages = {2910--2924},
+    volume = {161},
+    doi = {10.1016/j.dam.2013.06.002}
+}
+@article{exoo09,
+    title = {Locating-dominating codes in paths},
+    author = {G. Exoo and V. Junnila and T. Laihonen},
+    journal = {Discrete Mathematics},
+    year = {2011},
+    pages = {1863--1873},
+    volume = {311},
+    doi = {10.1016/j.disc.2011.05.004}
+}
+@inproceedings{fazl11,
+    title = {Connecting identifying codes and fundamental bounds},
+    author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
+    booktitle = {Proceedings of Information Theory and Applications Workshop, ITA 2011},
+    year = {2011},
+    pages = {403--409},
+    address = {La Jolla, USA},
+    doi = {10.1109/ITA.2011.5743612}
+}
+@inproceedings{fazl11a,
+    title = {Connected identifying codes for sensor network monitoring},
+    author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
+    booktitle = {Proceedings of IEEE Wireless Communications and Networking Conference, WCNC 2011},
+    month = {March},
+    year = {2011},
+    pages = {1026--1031},
+    address = {Cancun, Mexico},
+    doi = {10.1109/WCNC.2011.5779276}
+}
+@article{honk01c,
+    title = {On the identification of vertices and edges using cycles},
+    author = {I. Honkala and M. G. Karpovsky and S. Litsyn},
+    journal = {Lecture Notes in Computer Science},
+    year = {2001},
+    publisher = {Springer-Verlag},
+    pages = {308--314},
+    volume = {2227},
+    doi = {10.1007/3-540-45624-4_32}
+}
+@article{bous23,
+    title = {Locating-dominating sets: From graphs to oriented graphs},
+    author = {N. Bousquet and Q. Deschamps and T. Lehtil\"a and A. Parreau},
+    journal = {Discrete Mathematics},
+    year = {2023},
+    volume = {346},
+    number = {1},
+    doi = {10.1016/j.disc.2022.113124}
+}
+@inproceedings{xiao06,
+    title = {The $d$-identifying codes problem for vertex identification in graphs: probabilistic analysis and an approximation algorithm},
+    author = {Y. Xiao and C. Hadjicostis and K. Thulasiraman},
+    booktitle = {Proceedings of COCOON 2006, 12th Annual International Computing and Combinatorics Conference},
+    year = {2006},
+    pages = {284--298},
+    address = {Taipei, Taiwan},
+    publisher = {Springer},
+    doi = {10.1007/11809678_31}
+}
+@article{ungr04,
+    title = {An implementation of indoor location detection systems based on identifying codes},
+    author = {R. Ungrangsi and A. Trachtenberg and D. Starobinski},
+    journal = {Lecture Notes in Computer Science},
+    year = {2004},
+    pages = {175--189},
+    volume = {3283},
+    publisher = {Springer-Verlag},
+    doi = {10.1007/978-3-540-30179-0_16}
+}
+@inproceedings{tong14,
+    title = {Automorphisms of neighborhood sequence of a graph},
+    author = {L. D. Tong},
+    booktitle = {Proceedings of Bordeaux Graph Workshop},
+    year = {2014},
+    pages = {133--134},
+    address = {Bordeaux, France},
+    doi = {10.11650/tjm.19.2015.4816}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -732,14 +884,6 @@
     pages = {225--232},
     volume = {76}
 }
-@article{blid07,
-    title = {Locating-domination and identifying codes in trees},
-    author = {M. Blidia and M. Chellali and F. Maffray and J. Moncel and A. Semri},
-    journal = {Australasian Journal of Combinatorics},
-    year = {2007},
-    pages = {219--232},
-    volume = {39}
-}
 @article{blid09b,
     title = {A characterization of locating-domination edge critical graphs},
     author = {M. Blidia and W. Dali},
@@ -779,14 +923,6 @@
     year = {2009},
     pages = {5--14},
     volume = {29}
-}
-@article{bous23,
-    title = {Locating-dominating sets: {F}rom graphs to oriented graphs},
-    author = {N. Bousquet and Q. Deschamps and T. Lehtil\"a and A. Parreau},
-    journal = {Discrete Mathematics},
-    year = {2023},
-    volume = {346},
-    number = {1}
 }
 @article{bous14,
     title = {Identifying codes and VC-dimension},
@@ -1134,14 +1270,6 @@
     pages = {17},
     address = {Paris, France}
 }
-@article{char07,
-    title = {Extremal values for identification, domination and maximum cliques in twin-free graphs},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {Ars Combinatoria},
-    year = {2011},
-    pages = {161--185},
-    volume = {101}
-}
 @article{char11,
     title = {Minimum sizes of identifying codes in graphs differing by one edge or one vertex},
     author = {I. Charon and O. Hudry and A. Lobstein},
@@ -1329,14 +1457,6 @@
     volume = {16},
     number = {1}
 }
-@article{cuki13,
-    title = {New bounds on the minimum density of an identifying code for the infinite hexagonal grid},
-    author = {A. Cukierman and G. Yu},
-    journal = {Discrete Applied Mathematics},
-    year = {2013},
-    pages = {2910--2924},
-    volume = {161}
-}
 @article{dali14,
     title = {Criticality indices of locating-domination of paths and cycles},
     author = {W. Dali and M. Blidia},
@@ -1457,14 +1577,6 @@
     pages = {97--112},
     volume = {202}
 }
-@article{exoo09,
-    title = {Locating-dominating codes in paths},
-    author = {G. Exoo and V. Junnila and T. Laihonen},
-    journal = {Discrete Mathematics},
-    year = {2011},
-    pages = {1863--1873},
-    volume = {311}
-}
 @article{exoo11,
     title = {Locating-dominating codes in cycles},
     author = {G. Exoo and V. Junnila and T. Laihonen},
@@ -1527,23 +1639,6 @@
     year = {2016},
     pages = {224--234},
     volume = {72}
-}
-@article{fazl11,
-    title = {Connecting identifying codes and fundamental bounds},
-    author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
-    journal = {Proceedings of Information Theory and Applications Workshop, ITA 2011},
-    year = {2011},
-    pages = {403--409},
-    address = {La Jolla, USA}
-}
-@article{fazl11a,
-    title = {Connected identifying codes for sensor network monitoring},
-    author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
-    journal = {Proceedings of IEEE Wireless Communications and Networking Conference, WCNC 2011},
-    month = {March},
-    year = {2011},
-    pages = {1026--1031},
-    address = {Cancun, Mexico}
 }
 @article{fazl12,
     title = {Connected identifying codes},
@@ -1632,14 +1727,6 @@
     year = {2013},
     pages = {150--163},
     publisher = {Springer-Verlag}
-}
-@article{fouc15,
-    title = {Decision and approximation complexity for identifying codes and locating-dominating sets in restricted graph classes},
-    author = {F. Foucaud},
-    journal = {Journal of Discrete Algorithms},
-    year = {2015},
-    pages = {48--68},
-    volume = {31}
 }
 @article{fouc21q,
     title = {Characterizing extremal graphs for open neighbourhood location-domination},
@@ -1949,14 +2036,6 @@
     year = {2013},
     pages = {97--106},
     volume = {85}
-}
-@article{gonc13,
-    title = {Locally identifying coloring in bounded expansion classes of graphs},
-    author = {D. Gon\c calves and A. Parreau and A. Pinlou},
-    journal = {Discrete Applied Mathematics},
-    year = {2013},
-    pages = {2946--2951},
-    volume = {161}
 }
 @article{gonz18,
     title = {Metric-locating-dominating sets of graphs for constructing related subsets of vertices},
@@ -2309,14 +2388,6 @@
     pages = {599--612},
     volume = {IT-52}
 }
-@article{honk01c,
-    title = {On the identification of vertices and edges using cycles},
-    author = {I. Honkala and M. G. Karpovsky and S. Litsyn},
-    journal = {Lecture Notes in Computer Science},
-    year = {2001},
-    publisher = {Springer-Verlag},
-    pages = {308--314}
-}
 @article{honk04b,
     title = {Cycles identifying vertices and edges in binary hypercubes and 2-dimensional tori},
     author = {I. Honkala and M. G. Karpovsky and S. Litsyn},
@@ -2340,14 +2411,6 @@
     year = {2003},
     pages = {265--271},
     address = {Versailles, France}
-}
-@article{honk04e,
-    title = {Codes for identification in the king lattice},
-    author = {I. Honkala and T. Laihonen},
-    journal = {Graphs and Combinatorics},
-    year = {2003},
-    pages = {505--516},
-    volume = {19}
 }
 @article{honk04c,
     title = {On identifying codes in the hexagonal mesh},
@@ -3326,15 +3389,6 @@
     pages = {1--6},
     address = {Bhubaneswar, India}
 }
-@phdthesis{pari18,
-    title = {Resolution of some optimisation problems on graphs and combinatorial games},
-    author = {G. Paris},
-    month = {October},
-    year = {2018},
-    pages = {142},
-    school = {Universit\'e Claude Bernard Lyon 1},
-    address = {Lyon, France}
-}
 @phdthesis{parr12,
     title = {Probl\`emes d'identification dans les graphes},
     author = {A. Parreau},
@@ -3359,13 +3413,6 @@
     year = {1980},
     pages = {253--292},
     volume = {143}
-}
-@article{pela10,
-    title = {Locating domination in graphs},
-    author = {I. M. Pelayo},
-    journal = {Abstracts of the 8th French Combinatorial Conference},
-    year = {2010},
-    address = {Orsay, France}
 }
 @article{pelt10,
     title = {New bounds for $(r,\leq 2)$-identifying codes in the infinite king grid},
@@ -3984,14 +4031,6 @@
     pages = {14},
     address = {Bangalore, India}
 }
-@article{tong14,
-    title = {Automorphisms of neighborhood sequence of a graph},
-    author = {L. D. Tong},
-    journal = {Proceedings of Bordeaux Graph Workshop},
-    year = {2014},
-    pages = {133--134},
-    address = {Bordeaux, France}
-}
 @mastersthesis{ungr03,
     title = {Location detection in emergency sensor networks using robust identifying codes},
     author = {R. Ungrangsi},
@@ -3999,14 +4038,6 @@
     pages = {116},
     school = {Boston University},
     address = {Massachusetts, USA}
-}
-@article{ungr04,
-    title = {An implementation of indoor location detection systems based on identifying codes},
-    author = {R. Ungrangsi and A. Trachtenberg and D. Starobinski},
-    journal = {Lecture Notes in Computer Science},
-    year = {2004},
-    pages = {175--189},
-    publisher = {Springer-Verlag}
 }
 @phdthesis{vali12,
     title = {Probl\`emes de placement, de coloration et d'identification},
@@ -4031,14 +4062,6 @@
     pages = {63},
     school = {Clemson University},
     address = {South Carolina, USA}
-}
-@inproceedings{xiao06,
-    title = {The $d$-identifying codes problem for vertex identification in graphs: probabilistic analysis and an approximation algorithm},
-    author = {Y. Xiao and C. Hadjicostis and K. Thulasiraman},
-    booktitle = {Proceedings of COCOON 2006, 12th Annual International Computing and Combinatorics Conference},
-    year = {2006},
-    pages = {284--298},
-    address = {Taipei, Taiwan}
 }
 @article{xing14,
     title = {Bounds on locating-total domination number of the Cartesian product of cycles},
@@ -4186,6 +4209,11 @@
 
 
 
+
+
+
+
+
 @inproceedings{argi14a,
     title = {On identifying code polyhedra of families of suns},
     author = {G. R. Argiroffo and S. M. Bianchi and A. K. Wagler},
@@ -4252,4 +4280,37 @@
     journal = {Abstracts of the 8th French Combinatorial Conference},
     year = {2010},
     address = {Orsay, France}
+}
+@article{char07,
+    title = {Extremal values for identification, domination and maximum cliques in twin-free graphs},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {Ars Combinatoria},
+    year = {2011},
+    pages = {161--185},
+    volume = {101}
+}
+@article{blid07,
+    title = {Locating-domination and identifying codes in trees},
+    author = {M. Blidia and M. Chellali and F. Maffray and J. Moncel and A. Semri},
+    journal = {Australasian Journal of Combinatorics},
+    year = {2007},
+    pages = {219--232},
+    volume = {39}
+}
+@phdthesis{pari18,
+    title = {Resolution of some optimisation problems on graphs and combinatorial games},
+    author = {G. Paris},
+    month = {October},
+    year = {2018},
+    pages = {142},
+    school = {Universit\'e Claude Bernard Lyon 1},
+    address = {Lyon, France}
+}
+@article{pela10,
+    title = {Locating domination in graphs},
+    author = {I. M. Pelayo},
+    journal = {Abstracts of the 8th French Combinatorial Conference},
+    year = {2010},
+    address = {Orsay, France},
+    pages = {1}
 }
