--- a/refs.bib
+++ b/refs.bib
@@ -553,6 +553,47 @@
     address = {Bordeaux, France},
     doi = {10.11650/tjm.19.2015.4816}
 }
+@article{jean22,
+    title = {Extremal cubic graphs for fault-tolerant locating domination},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {Theoretical Computer Science},
+    year = {2022},
+    pages = {94--106},
+    volume = {917},
+    doi = {10.1016/j.tcs.2022.03.014}
+}
+@article{jean23,
+    title = {Optimal error-detecting open-locating-dominating set on the infinite triangular grid},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {Discussiones Mathematicae Graph Theory},
+    year = {2023},
+    pages = {445--455},
+    volume = {43},
+    number = {2},
+    doi = {10.7151/dmgt.2374}
+}
+@article{jeanAP2,
+    title = {Progress on fault-tolerant locating-dominating sets},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {Discrete Mathematics, Algorithms and Applications},
+    volume = {15},
+    number = {2},
+    pages = {14},
+    year = {2023},
+    note = {to appear},
+    doi = {10.1142/S179383092250080X}
+}
+@article{jeanDAM23,
+    title = {On Redundant Locating-Dominating Sets},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {Discrete Applied Mathematics},
+    volume = {329},
+    year = {2023},
+    pages = {106--125},
+    doi = {10.1016/j.dam.2023.01.023}
+}
+
+
 
 
 
@@ -2630,23 +2671,6 @@
     publisher = {Springer-Verlag},
     pages = {299--307}
 }
-@article{jean22,
-    title = {Extremal cubic graphs for fault-tolerant locating domination},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {Theoretical Computer Science},
-    year = {2022},
-    pages = {94--106},
-    volume = {917}
-}
-@article{jean23,
-    title = {Optimal error-detecting open-locating-dominating set on the infinite triangular grid},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {Discussiones Mathematicae Graph Theory},
-    year = {2023},
-    pages = {445--455},
-    volume = {43},
-    number = {2}
-}
 @article{jian18,
     title = {Periodicity of identifying codes in strips},
     author = {M. Jiang},
@@ -4221,17 +4245,6 @@
     month = {December},
     year = {2014},
     address = {Montevideo, Uruguay}
-}
-@article{jeanAP2,
-    title = {Progress on fault-tolerant locating-dominating sets},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {Discrete Mathematics, Algorithms and Applications},
-    doi = {10.1142/S179383092250080X},
-    volume = {15},
-    number = {2},
-    pages = {14},
-    year = {2022},
-    note = {to appear}
 }
 @article{auge09d,
     title = {Existence d'un cycle de longueur au moins $7$ dans un graphe sans ($1,\leq 2$)-jumeaux},
