--- a/refs.bib
+++ b/refs.bib
@@ -580,7 +580,6 @@
     number = {2},
     pages = {14},
     year = {2023},
-    note = {to appear},
     doi = {10.1142/S179383092250080X}
 }
 @article{jeanDAM23,
@@ -592,9 +591,33 @@
     pages = {106--125},
     doi = {10.1016/j.dam.2023.01.023}
 }
-
-
-
+@article{honk02d,
+    title = {On strongly identifying codes},
+    author = {I. Honkala and T. Laihonen and S. Ranto},
+    journal = {Discrete Mathematics},
+    year = {2002},
+    pages = {191--205},
+    volume = {254},
+    doi = {10.1016/S0012-365X(01)00357-0}
+}
+@article{honk04g,
+    title = {On a new class of identifying codes in graphs},
+    author = {I. Honkala and T. Laihonen},
+    journal = {Information Processing Letters},
+    year = {2007},
+    pages = {92--98},
+    volume = {102},
+    doi = {10.1016/j.ipl.2006.11.007}
+}
+@article{junn18,
+    title = {On regular and new types of codes for location-domination},
+    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
+    journal = {Discrete Applied Mathematics},
+    year = {2018},
+    pages = {225--241},
+    volume = {247},
+    doi = {10.1016/j.dam.2018.03.050}
+}
 
 
 
@@ -2485,14 +2508,6 @@
     pages = {218--227},
     volume = {27}
 }
-@article{honk04g,
-    title = {On a new class of identifying codes in graphs},
-    author = {I. Honkala and T. Laihonen},
-    journal = {Information Processing Letters},
-    year = {2007},
-    pages = {92--98},
-    volume = {102}
-}
 @article{honk06d,
     title = {On identifying codes that are robust against edge changes},
     author = {I. Honkala and T. Laihonen},
@@ -2524,14 +2539,6 @@
     year = {2001},
     pages = {193--204},
     volume = {24}
-}
-@article{honk02d,
-    title = {On strongly identifying codes},
-    author = {I. Honkala and T. Laihonen and S. Ranto},
-    journal = {Discrete Mathematics},
-    year = {2002},
-    pages = {191--205},
-    volume = {254}
 }
 @article{honk04a,
     title = {On locating-dominating codes in binary Hamming spaces},
@@ -2790,14 +2797,6 @@
     journal = {Advances in Applied Mathematics},
     year = {2020},
     volume = {112}
-}
-@article{junn18,
-    title = {On regular and new types of codes for location-domination},
-    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
-    journal = {Discrete Applied Mathematics},
-    year = {2018},
-    pages = {225--241},
-    volume = {247}
 }
 @article{junn19j,
     title = {On a conjecture regarding identification in Hamming graphs},
