--- a/refs.bib
+++ b/refs.bib
@@ -618,6 +618,204 @@
     volume = {247},
     doi = {10.1016/j.dam.2018.03.050}
 }
+@article{entr74,
+    title = {Line-critical point determining and point distinguishing graphs},
+    author = {R. C. Entringer and L. D. Gassman},
+    journal = {Discrete Mathematics},
+    year = {1974},
+    pages = {43--55},
+    volume = {10},
+    number = {1},
+    doi = {10.1016/0012-365X(74)90019-3}
+}
+@article{char03a,
+    title = {The minimum density of an identifying code in the king lattice},
+    author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
+    journal = {Discrete Mathematics},
+    year = {2004},
+    pages = {95--109},
+    volume = {276},
+    doi = {10.1016/S0012-365X(03)00306-6}
+}
+@article{pirz14,
+    title = {Locating sets and numbers of graphs associated to commutative rings},
+    author = {S. Pirzada and R. Raja and S. Redmond},
+    journal = {Journal of Algebra and Its Applications},
+    year = {2014},
+    volume = {13},
+    number = {7},
+    pages = {18},
+    doi = {10.1142/S0219498814500479}
+}
+@article{laih08,
+    title = {On cages admitting identifying codes},
+    author = {T. Laihonen},
+    journal = {European Journal of Combinatorics},
+    year = {2008},
+    pages = {737--741},
+    volume = {29},
+    number = {3},
+    doi = {10.1016/j.ejc.2007.02.016}
+}
+@article{niep15,
+    title = {Locating-paired-dominating sets in square grids},
+    author = {L. Niepel},
+    journal = {Discrete Mathematics},
+    year = {2015},
+    pages = {1699--1705},
+    volume = {338},
+    number = {10},
+    doi = {10.1016/j.disc.2014.07.009}
+}
+@article{laif08,
+    title = {Identifying codes and covering problems},
+    author = {M. Laifenfeld and A. Trachtenberg},
+    journal = {IEEE Transactions on Information Theory},
+    year = {2008},
+    pages = {3929--3950},
+    volume = {54},
+    number = {9},
+    doi = {10.1109/TIT.2008.928263}
+}
+@article{honk14c,
+    title = {On the number of optimal identifying codes in a twin-free graph},
+    author = {I. Honkala and O. Hudry and A. Lobstein},
+    journal = {Discrete Applied Mathematics},
+    year = {2015},
+    pages = {111--119},
+    volume = {180},
+    doi = {10.1016/j.dam.2014.08.020}
+}
+@article{fouc22FL,
+    title = {Revisiting and improving upper bounds for identifying codes},
+    author = {F. Foucaud and T. Lehtil\"a},
+    journal = {SIAM Journal on Discrete Mathematics},
+    year = {2022},
+    pages = {2619--2634},
+    volume = {36},
+    number = {4},
+    doi = {10.1137/22M148999X}
+}
+@article{jian18,
+    title = {Periodicity of identifying codes in strips},
+    author = {M. Jiang},
+    journal = {Information Processing Letters},
+    year = {2018},
+    pages = {77--84},
+    volume = {135},
+    doi = {10.1016/j.ipl.2018.03.007}
+}
+@article{honk14a,
+    title = {On the ensemble of optimal dominating and locating-dominating codes in a graph},
+    author = {I. Honkala and O. Hudry and A. Lobstein},
+    journal = {Information Processing Letters},
+    year = {2015},
+    pages = {699--702},
+    volume = {115},
+    number = {9},
+    doi = {10.1016/j.ipl.2015.04.005}
+}
+@article{chen11,
+    title = {Identifying codes and locating-dominating sets on paths and cycles},
+    author = {C. Chen and C. Lu and Z. Miao},
+    journal = {Discrete Applied Mathematics},
+    year = {2011},
+    pages = {1540--1547},
+    volume = {159},
+    number = {15},
+    doi = {10.1016/j.dam.2011.06.008}
+}
+@article{gled19,
+    title = {Identification of points using disks},
+    author = {V. Gledel and A. Parreau},
+    journal = {Discrete Mathematics},
+    year = {2019},
+    pages = {256--269},
+    volume = {342},
+    number = {1},
+    doi = {10.1016/j.disc.2018.10.002}
+}
+@article{fouc20q,
+    title = {Domination and location in twin-free digraphs},
+    author = {F. Foucaud and S. Heydarshahi and A. Parreau},
+    journal = {Discrete Applied Mathematics},
+    year = {2020},
+    pages = {42--52},
+    volume = {284},
+    doi = {10.1016/j.dam.2020.03.025}
+}
+@article{have14,
+    title = {Detection number of bipartite graphs and cubic graphs},
+    author = {F. Havet and N. Paramaguru and R. Sampathkumar},
+    journal = {Discrete Mathematics and Theoretical Computer Science},
+    year = {2014},
+    pages = {333--342},
+    volume = {16},
+    number = {3},
+    doi = {10.46298/dmtcs.642}
+}
+@article{honk02a,
+    title = {On the density of identifying codes in the square lattice},
+    author = {I. Honkala and A. Lobstein},
+    journal = {Journal of Combinatorial Theory, Series B},
+    year = {2002},
+    pages = {297--306},
+    volume = {85},
+    number = {2},
+    doi = {10.1006/jctb.2001.2106}
+}
+@article{hudr15a,
+    title = {More results on the complexity of identifying problems in graphs},
+    author = {O. Hudry and A. Lobstein},
+    journal = {Theoretical Computer Science},
+    year = {2016},
+    pages = {1--12},
+    volume = {626},
+    doi = {10.1016/j.tcs.2016.01.021}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -948,14 +1146,6 @@
     pages = {225--232},
     volume = {76}
 }
-@article{blid09b,
-    title = {A characterization of locating-domination edge critical graphs},
-    author = {M. Blidia and W. Dali},
-    journal = {Australasian Journal of Combinatorics},
-    year = {2009},
-    pages = {297--300},
-    volume = {44}
-}
 @article{blid11k,
     title = {A characterization of locating-total domination edge critical graphs},
     author = {M. Blidia and W. Dali},
@@ -1071,14 +1261,6 @@
     pages = {423--441},
     volume = {21},
     number = {2}
-}
-@article{cama15,
-    title = {Identifying codes of degree $4$ Cayley graphs over Abelian groups},
-    author = {C. Camarero and C. Martinez and R. Beivide},
-    journal = {Advances in Mathematics of Communications},
-    year = {2015},
-    pages = {129--148},
-    volume = {9}
 }
 @article{cano13,
     title = {Determining the intruders location in a given network: Locating-dominating sets in a graph},
@@ -1218,14 +1400,6 @@
     year = {2001},
     volume = {8},
     number = {1}
-}
-@article{char03a,
-    title = {The minimum density of an identifying code in the king lattice},
-    author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
-    journal = {Discrete Mathematics},
-    year = {2004},
-    pages = {95--109},
-    volume = {276}
 }
 @article{char06,
     title = {Structural properties of twin-free graphs},
@@ -1423,22 +1597,6 @@
     volume = {2},
     number = {2}
 }
-@article{chen11,
-    title = {Identifying codes and locating-dominating sets on paths and cycles},
-    author = {C. Chen and C. Lu and Z. Miao},
-    journal = {Discrete Applied Mathematics},
-    year = {2011},
-    pages = {1540--1547},
-    volume = {159}
-}
-@article{cohe99a,
-    title = {Improved identifying codes for the grid},
-    author = {G. Cohen and S. Gravier and I. Honkala and A. Lobstein and M. Mollard and Ch. Payan and G. Z\'emor},
-    journal = {Electronic Journal of Combinatorics},
-    year = {1999},
-    volume = {6},
-    number = {1}
-}
 @article{cohe99b,
     title = {New bounds for codes identifying vertices in graphs},
     author = {G. Cohen and I. Honkala and A. Lobstein and G. Z\'emor},
@@ -1611,22 +1769,6 @@
     volume = {16},
     number = {1}
 }
-@article{entr74,
-    title = {Line-critical point determining and point distinguishing graphs},
-    author = {R. C. Entringer and L. D. Gassman},
-    journal = {Discrete Mathematics},
-    year = {1974},
-    pages = {43--55},
-    volume = {10}
-}
-@article{espe12,
-    title = {Locally identifying coloring of graphs},
-    author = {L. Esperet and S. Gravier and M. Montassier and P. Ochem and A. Parreau},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2012},
-    volume = {19},
-    number = {2}
-}
 @article{exoo99a,
     title = {Computational results on identifying $t$-codes},
     author = {G. Exoo},
@@ -1728,14 +1870,6 @@
     pages = {88--96},
     volume = {169}
 }
-@article{feng12,
-    title = {Identifying codes of lexicographic product of graphs},
-    author = {M. Feng and M. Xu and K. Wang},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2012},
-    volume = {19},
-    number = {4}
-}
 @article{finb88a,
     title = {On locating dominating sets and well-covered graphs},
     author = {A. S. Finbow and B. L. Hartnell},
@@ -1773,15 +1907,6 @@
     school = {Universit\'e de Bordeaux 1},
     month = {June},
     year = {2009},
-    address = {Bordeaux, France}
-}
-@phdthesis{fouc12b,
-    title = {Aspects combinatoires et algorithmiques des codes identifiants dans les graphes},
-    author = {F. Foucaud},
-    month = {December},
-    year = {2012},
-    pages = {194},
-    school = {Universit\'e de Bordeaux 1},
     address = {Bordeaux, France}
 }
 @article{fouc13a,
@@ -1870,14 +1995,6 @@
     pages = {52--58},
     volume = {200}
 }
-@article{fouc20q,
-    title = {Domination and location in twin-free digraphs},
-    author = {F. Foucaud and S. Heydarshahi and A. Parreau},
-    journal = {Discrete Applied Mathematics},
-    year = {2020},
-    pages = {42--52},
-    volume = {284}
-}
 @article{fouc12,
     title = {Locally identifying colourings for graphs with given maximum degree},
     author = {F. Foucaud and I. Honkala and T. Laihonen and A. Parreau and G. Perarnau},
@@ -1926,14 +2043,6 @@
     pages = {35--52},
     volume = {8}
 }
-@article{fouc22FL,
-    title = {Revisiting and improving upper bounds for identifying codes},
-    author = {F. Foucaud and T. Lehtil\"a},
-    journal = {SIAM Journal on Discrete Mathematics},
-    year = {2022},
-    pages = {2619--2634},
-    volume = {36}
-}
 @article{fouc16b,
     title = {Algorithms and complexity for metric dimension and location-domination on interval and permutation graphs},
     author = {F. Foucaud and G. B. Mertzios and R. Naserasr and A. Parreau and P. Valicov},
@@ -1965,14 +2074,6 @@
     year = {2013},
     pages = {463--473},
     volume = {29}
-}
-@article{fouc11c,
-    title = {Bounds for identifying codes in terms of degree parameters},
-    author = {F. Foucaud and G. Perarnau},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2012},
-    volume = {19},
-    number = {1}
 }
 @article{fouc17x,
     title = {Random subgraphs make identification affordable},
@@ -2013,14 +2114,6 @@
     year = {1993},
     pages = {633--645},
     volume = {17}
-}
-@article{garn95a,
-    title = {Algorithmic search for extremal graphs of girth at least five},
-    author = {D. K. Garnick and Y. H. H. Kwong and F. Lazebnik},
-    journal = {Graph Theory, Combinatorics, and Applications: Proceedings of the 7th Quadrennial International Conference on the Theory and Applications of Graphs},
-    year = {1995},
-    pages = {697--709},
-    volume = {2}
 }
 @article{garn92a,
     title = {Nonisomorphic extremal graphs without three-cycles or four-cycles},
@@ -2084,14 +2177,6 @@
     pages = {47--62},
     volume = {42},
     number = {1}
-}
-@article{gled19,
-    title = {Identification of points using disks},
-    author = {V. Gledel and A. Parreau},
-    journal = {Discrete Mathematics},
-    year = {2019},
-    pages = {256--269},
-    volume = {342}
 }
 @article{godd13,
     title = {ID codes in Cartesian products of cliques},
@@ -2246,14 +2331,6 @@
     pages = {246--256},
     volume = {95}
 }
-@article{have14,
-    title = {Detection number of bipartite graphs and cubic graphs},
-    author = {F. Havet and N. Paramaguru and R. Sampathkumar},
-    journal = {Discrete Mathematics and Theoretical Computer Science},
-    year = {2014},
-    pages = {333--342},
-    volume = {16}
-}
 @article{hayn98a,
     title = {Fundamentals of Domination in Graphs},
     author = {T. W. Haynes and S. T. Hedetniemi and P. J. Slater},
@@ -2269,14 +2346,6 @@
     year = {2006},
     pages = {1293--1300},
     volume = {154}
-}
-@article{hayn09,
-    title = {Locating-domination in complementary prisms of paths and cycles},
-    author = {T. W. Haynes and K. R. S. Holmes and D. R. Koessler and L. Sewell},
-    journal = {Congressus Numerantium},
-    year = {2009},
-    pages = {45--55},
-    volume = {199}
 }
 @article{hede15,
     title = {On identifying codes in the Cartesian product of a path and a complete graph},
@@ -2371,22 +2440,6 @@
     pages = {152--160},
     volume = {26}
 }
-@mastersthesis{holm09,
-    title = {Locating-domination in complementary prisms},
-    author = {K. R. S. Holmes},
-    school = {East Tennessee State University},
-    year = {2009},
-    pages = {37},
-    address = {Tennessee, USA}
-}
-@article{holm10,
-    title = {Locating-domination in complementary prisms},
-    author = {K. R. S. Holmes and D. R. Koessler and T. W. Haynes},
-    journal = {Journal of Combinatorial Mathematics and Combinatorial Computing},
-    year = {2010},
-    pages = {163--171},
-    volume = {72}
-}
 @article{honk99a,
     title = {On the identifying radius of codes},
     author = {I. Honkala},
@@ -2419,22 +2472,6 @@
     pages = {151--165},
     volume = {36},
     howpublished = {\url{https://ajc.maths.uq.edu.au/pdf/36/ajc_v36_p151.pdf}}
-}
-@article{honk14c,
-    title = {On the number of optimal identifying codes in a twin-free graph},
-    author = {I. Honkala and O. Hudry and A. Lobstein},
-    journal = {Discrete Applied Mathematics},
-    year = {2015},
-    pages = {111--119},
-    volume = {180}
-}
-@article{honk14a,
-    title = {On the ensemble of optimal dominating and locating-dominating codes in a graph},
-    author = {I. Honkala and O. Hudry and A. Lobstein},
-    journal = {Information Processing Letters},
-    year = {2015},
-    pages = {699--702},
-    volume = {115}
 }
 @article{honk14b,
     title = {On the ensemble of optimal identifying codes in a twin-free graph},
@@ -2548,14 +2585,6 @@
     pages = {265--282},
     volume = {6}
 }
-@article{honk02a,
-    title = {On the density of identifying codes in the square lattice},
-    author = {I. Honkala and A. Lobstein},
-    journal = {Journal of Combinatorial Theory, Series B},
-    year = {2002},
-    pages = {297--306},
-    volume = {85}
-}
 @article{honk02b,
     title = {On identifying codes in binary Hamming spaces},
     author = {I. Honkala and A. Lobstein},
@@ -2605,14 +2634,6 @@
     year = {2004},
     pages = {48},
     address = {Tennessee, USA}
-}
-@article{hudr15a,
-    title = {More results on the complexity of identifying problems in graphs},
-    author = {O. Hudry and A. Lobstein},
-    journal = {Theoretical Computer Science},
-    year = {2016},
-    pages = {1--12},
-    volume = {626}
 }
 @article{hudr16,
     title = {Some results about a conjecture on identifying codes in complete suns},
@@ -2677,14 +2698,6 @@
     year = {2016},
     publisher = {Springer-Verlag},
     pages = {299--307}
-}
-@article{jian18,
-    title = {Periodicity of identifying codes in strips},
-    author = {M. Jiang},
-    journal = {Information Processing Letters},
-    year = {2018},
-    pages = {77--84},
-    volume = {135}
 }
 @phdthesis{junn11a,
     title = {On identifying and locating-dominating codes},
@@ -2967,14 +2980,6 @@
     pages = {244--248},
     address = {Adelaide, Australia}
 }
-@article{laif08,
-    title = {Identifying codes and covering problems},
-    author = {M. Laifenfeld and A. Trachtenberg},
-    journal = {IEEE Transactions on Information Theory},
-    year = {2008},
-    pages = {3929--3950},
-    volume = {IT-54}
-}
 @inproceedings{laif06,
     title = {Identifying codes and the set cover problem},
     author = {M. Laifenfeld and A. Trachtenberg and T. Y. Berger-wolf},
@@ -3039,14 +3044,6 @@
     year = {2007},
     pages = {87--102},
     volume = {36}
-}
-@article{laih08,
-    title = {On cages admitting identifying codes},
-    author = {T. Laihonen},
-    journal = {European Journal of Combinatorics},
-    year = {2008},
-    pages = {737--741},
-    volume = {29}
 }
 @article{laih16,
     title = {The metric dimension for resolving several objects},
@@ -3330,14 +3327,6 @@
     volume = {5},
     number = {1}
 }
-@article{niep15,
-    title = {Locating-paired-dominating sets in square grids},
-    author = {L. Niepel},
-    journal = {Discrete Mathematics},
-    year = {2015},
-    pages = {1699--1705},
-    volume = {338}
-}
 @article{nika20,
     title = {Minimum identifying codes in some graphs differing by matchings},
     author = {R. Nikandish and O. Khani nasab and E. Dodonge},
@@ -3509,15 +3498,6 @@
     year = {2017},
     pages = {143--158},
     volume = {233}
-}
-@article{pirz14,
-    title = {Locating sets and numbers of graphs associated to commutative rings},
-    author = {S. Pirzada and R. Raja and S. Redmond},
-    journal = {Journal of Algebra and Its Applications},
-    year = {2014},
-    volume = {13},
-    number = {7},
-    pages = {18}
 }
 @article{pu2013,
     title = {Bounds of $r$-identifying and $r$-locating-dominating codes in the Kronecker product graph of $cy_n$ and $\bar{k}_2$},
@@ -4325,4 +4305,93 @@
     year = {2010},
     address = {Orsay, France},
     pages = {1}
+}
+@article{blid09b,
+    title = {A characterization of locating-domination edge critical graphs},
+    author = {M. Blidia and W. Dali},
+    journal = {Australasian Journal of Combinatorics},
+    year = {2009},
+    pages = {297--300},
+    volume = {44}
+}
+@article{espe12,
+    title = {Locally identifying coloring of graphs},
+    author = {L. Esperet and S. Gravier and M. Montassier and P. Ochem and A. Parreau},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2012},
+    volume = {19},
+    number = {2}
+}
+@article{cama15,
+    title = {Identifying codes of degree $4$ Cayley graphs over Abelian groups},
+    author = {C. Camarero and C. Martinez and R. Beivide},
+    journal = {Advances in Mathematics of Communications},
+    year = {2015},
+    pages = {129--148},
+    volume = {9}
+}
+@mastersthesis{holm09,
+    title = {Locating-domination in complementary prisms},
+    author = {K. R. S. Holmes},
+    school = {East Tennessee State University},
+    year = {2009},
+    pages = {37},
+    address = {Tennessee, USA}
+}
+@article{holm10,
+    title = {Locating-domination in complementary prisms},
+    author = {K. R. S. Holmes and D. R. Koessler and T. W. Haynes},
+    journal = {Journal of Combinatorial Mathematics and Combinatorial Computing},
+    year = {2010},
+    pages = {163--171},
+    volume = {72}
+}
+@article{feng12,
+    title = {Identifying codes of lexicographic product of graphs},
+    author = {M. Feng and M. Xu and K. Wang},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2012},
+    volume = {19},
+    number = {4}
+}
+@article{garn95a,
+    title = {Algorithmic search for extremal graphs of girth at least five},
+    author = {D. K. Garnick and Y. H. H. Kwong and F. Lazebnik},
+    journal = {Graph Theory, Combinatorics, and Applications: Proceedings of the 7th Quadrennial International Conference on the Theory and Applications of Graphs},
+    year = {1995},
+    pages = {697--709},
+    volume = {2}
+}
+@article{hayn09,
+    title = {Locating-domination in complementary prisms of paths and cycles},
+    author = {T. W. Haynes and K. R. S. Holmes and D. R. Koessler and L. Sewell},
+    journal = {Congressus Numerantium},
+    year = {2009},
+    pages = {45--55},
+    volume = {199}
+}
+@phdthesis{fouc12b,
+    title = {Aspects combinatoires et algorithmiques des codes identifiants dans les graphes},
+    author = {F. Foucaud},
+    month = {December},
+    year = {2012},
+    pages = {194},
+    school = {Universit\'e de Bordeaux 1},
+    address = {Bordeaux, France}
+}
+@article{cohe99a,
+    title = {Improved identifying codes for the grid},
+    author = {G. Cohen and S. Gravier and I. Honkala and A. Lobstein and M. Mollard and Ch. Payan and G. Z\'emor},
+    journal = {Electronic Journal of Combinatorics},
+    year = {1999},
+    volume = {6},
+    number = {1}
+}
+@article{fouc11c,
+    title = {Bounds for identifying codes in terms of degree parameters},
+    author = {F. Foucaud and G. Perarnau},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2012},
+    volume = {19},
+    number = {1}
 }
