--- a/refs.bib
+++ b/refs.bib
@@ -7,6 +7,52 @@
     volume = {2021},
     doi = {10.1155/2021/8147514}
 }
+@article{laih06b,
+    title = {On robust identification in the square and king grids},
+    author = {T. Laihonen},
+    journal = {Discrete Applied Mathematics},
+    year = {2006},
+    pages = {2499--2510},
+    volume = {154},
+    number = {17},
+    doi = {10.1016/j.dam.2006.03.037}
+}
+@article{fouc17y,
+    title = {Identification, location-domination and metric dimension on interval and permutation graphs: II. Algorithms and complexity},
+    author = {F. Foucaud and G. B. Mertzios and R. Naserasr and A. Parreau and P. Valicov},
+    journal = {Algorithmica},
+    year = {2017},
+    pages = {914--944},
+    volume = {78},
+    doi = {10.1007/s00453-016-0184-1}
+}
+@article{junn19j,
+    title = {On a conjecture regarding identification in Hamming graphs},
+    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2019},
+    volume = {26},
+    number = {2},
+    doi = {10.37236/7828}
+}
+@article{payn80,
+    title = {Identification keys and diagnostic tables: a review},
+    author = {R. W. Payne and D. A. Preece},
+    journal = {Journal of the Royal Statistical Society, Series A},
+    year = {1980},
+    pages = {253--292},
+    volume = {143},
+    doi = {10.2307/2982129}
+}
+@article{honk04f,
+    title = {On identification in the triangular grid},
+    author = {I. Honkala and T. Laihonen},
+    journal = {Journal of Combinatorial Theory, Series B},
+    year = {2004},
+    pages = {67--86},
+    volume = {91},
+    doi = {10.1016/j.jctb.2003.10.002}
+}
 @article{ahma21,
     title = {Stable locating-dominating sets in graphs},
     author = {E. C. Ahmad and G. A. Malacas and S. R. Canoy, Jr.},
@@ -253,6 +299,33 @@
     volume = {570},
     doi = {10.1016/j.laa.2019.02.010}
 }
+@article{finb00a,
+    title = {Well-located graphs: a collection of well-covered ones},
+    author = {A. S. Finbow and B. L. Hartnell},
+    journal = {Electronic Notes in Discrete Mathematics},
+    year = {2000},
+    volume = {5},
+    pages = {120--122},
+    doi = {10.1016/S1571-0653(05)80141-6}
+}
+@article{finb04a,
+    title = {Well-located graphs: a collection of well-covered ones},
+    author = {A. S. Finbow and B. L. Hartnell},
+    journal = {Discrete Mathematics},
+    year = {2004},
+    pages = {201--209},
+    volume = {276},
+    doi = {10.1016/S0012-365X(03)00297-8}
+}
+@article{mull09,
+    title = {Identifying and locating-dominating codes in (random) geometric networks},
+    author = {T. M\"{u}ller and J. S. Sereni},
+    journal = {Combinatorics, Probability and Computing},
+    year = {2009},
+    pages = {925--952},
+    volume = {18},
+    doi = {10.1017/S0963548309990344}
+}
 @article{balb20k,
     title = {Identifying codes in line digraphs},
     author = {C. Balbuena and C. Dalf\'o and B. Mart\'inez-barona},
@@ -329,6 +402,42 @@
     number = {1},
     doi = {10.7151/dmgt.2129}
 }
+@article{junn16,
+    title = {Information retrieval with varying number of input clues},
+    author = {V. Junnila and T. Laihonen},
+    journal = {IEEE Transactions on Information Theory},
+    year = {2016},
+    pages = {625--638},
+    volume = {IT-62},
+    doi = {10.1109/TIT.2015.2508800}
+}
+@article{honk05c,
+    title = {On locating-dominating sets in infinite grids},
+    author = {I. Honkala and T. Laihonen},
+    journal = {European Journal of Combinatorics},
+    year = {2006},
+    pages = {218--227},
+    volume = {27},
+    doi = {10.1016/j.ejc.2004.09.002}
+}
+@article{hern14,
+    title = {Nordhaus-Gaddum bounds for locating domination},
+    author = {C. Hernando and M. Mora and I. M. Pelayo},
+    journal = {European Journal of Combinatorics},
+    year = {2014},
+    pages = {1--6},
+    volume = {36},
+    doi = {10.1016/j.ejc.2013.04.009}
+}
+@article{honk14b,
+    title = {On the ensemble of optimal identifying codes in a twin-free graph},
+    author = {I. Honkala and O. Hudry and A. Lobstein},
+    journal = {Cryptography and Communications -- Discrete Structures, Boolean Functions and Sequences},
+    year = {2016},
+    pages = {139--153},
+    volume = {8},
+    doi = {10.1007/s12095-015-0148-3}
+}
 @article{jeanAP1,
     title = {Fault-tolerant identifying codes in special classes of graphs},
     author = {D. C. Jean and S. J. Seo},
@@ -375,6 +484,16 @@
     address = {Atlanta, Georgia, USA},
     publisher = {ACM},
     doi = {10.1145/2016039.2016134}
+}
+@article{hudr20z,
+    title = {Some rainbow problems in graphs have complexity equivalent to satisfiability problems},
+    author = {O. Hudry and A. Lobstein},
+    journal = {International Transactions in Operational Research},
+    year = {2022},
+    pages = {1547--1572},
+    volume = {29},
+    number = {3},
+    doi = {10.1111/itor.12847}
 }
 @article{delm11,
     title = {On two variations of identifying codes},
@@ -440,6 +559,15 @@
     volume = {181},
     pages = {1--16},
     doi = {10.4230/LIPIcs.ISAAC.2020.24}
+}
+@article{honk06d,
+    title = {On identifying codes that are robust against edge changes},
+    author = {I. Honkala and T. Laihonen},
+    journal = {Information and Computation},
+    year = {2007},
+    pages = {1078--1095},
+    volume = {205},
+    doi = {10.1016/j.ic.2007.01.003}
 }
 @article{honk04e,
     title = {Codes for identification in the king lattice},
@@ -773,7 +901,15 @@
     volume = {626},
     doi = {10.1016/j.tcs.2016.01.021}
 }
-
+@article{laih02b,
+    title = {Families of optimal codes for strong identification},
+    author = {T. Laihonen and S. Ranto},
+    journal = {Discrete Applied Mathematics},
+    year = {2002},
+    pages = {203--213},
+    volume = {121},
+    doi = {10.1016/S0166-218X(01)00248-7}
+}
 
 
 
@@ -1878,21 +2014,6 @@
     pages = {191--200},
     volume = {65}
 }
-@article{finb00a,
-    title = {Well-located graphs: a collection of well-covered ones},
-    author = {A. S. Finbow and B. L. Hartnell},
-    journal = {Electronic Notes in Discrete Mathematics},
-    year = {2000},
-    volume = {5}
-}
-@article{finb04a,
-    title = {Well-located graphs: a collection of well-covered ones},
-    author = {A. S. Finbow and B. L. Hartnell},
-    journal = {Discrete Mathematics},
-    year = {2004},
-    pages = {201--209},
-    volume = {276}
-}
 @article{finb21,
     title = {The complexity of monitoring a network with both watchers and listeners},
     author = {A. S. Finbow and B. L. Hartnell and J. R. Young},
@@ -2020,13 +2141,6 @@
     pages = {1532--1546},
     volume = {160}
 }
-@article{fouc14,
-    title = {On graph identification problems and the special case of identifying vertices using paths},
-    author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
-    journal = {Lecture Notes in Computer Science},
-    year = {2012},
-    pages = {32--45}
-}
 @article{fouc13c,
     title = {Identifying path covers in graphs},
     author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
@@ -2058,14 +2172,6 @@
     year = {2017},
     pages = {43--58},
     volume = {668}
-}
-@article{fouc17y,
-    title = {Identification, location-domination and metric dimension on interval and permutation graphs: II. Algorithms and complexity},
-    author = {F. Foucaud and G. B. Mertzios and R. Naserasr and A. Parreau and P. Valicov},
-    journal = {Algorithmica},
-    year = {2017},
-    pages = {914--944},
-    volume = {78}
 }
 @article{fouc11,
     title = {Characterizing extremal digraphs for identifying codes and extremal cases of Bondy's theorem on induced subsets},
@@ -2395,14 +2501,6 @@
     pages = {909--932},
     volume = {30}
 }
-@article{hern14,
-    title = {Nordhaus-Gaddum bounds for locating domination},
-    author = {C. Hernando and M. Mora and I. M. Pelayo},
-    journal = {European Journal of Combinatorics},
-    year = {2014},
-    pages = {1--6},
-    volume = {36}
-}
 @article{hern15,
     title = {On global location-domination in graphs},
     author = {C. Hernando and M. Mora and I. M. Pelayo},
@@ -2473,14 +2571,6 @@
     volume = {36},
     howpublished = {\url{https://ajc.maths.uq.edu.au/pdf/36/ajc_v36_p151.pdf}}
 }
-@article{honk14b,
-    title = {On the ensemble of optimal identifying codes in a twin-free graph},
-    author = {I. Honkala and O. Hudry and A. Lobstein},
-    journal = {Cryptography and Communications -- Discrete Structures, Boolean Functions and Sequences},
-    year = {2016},
-    pages = {139--153},
-    volume = {8}
-}
 @article{honk06f,
     title = {On robust and dynamic identifying codes},
     author = {I. Honkala and M. G. Karpovsky and L. B. Levitin},
@@ -2528,30 +2618,6 @@
     year = {2004},
     pages = {304--312},
     volume = {33}
-}
-@article{honk04f,
-    title = {On identification in the triangular grid},
-    author = {I. Honkala and T. Laihonen},
-    journal = {Journal of Combinatorial Theory, Series B},
-    year = {2004},
-    pages = {67--86},
-    volume = {91}
-}
-@article{honk05c,
-    title = {On locating-dominating sets in infinite grids},
-    author = {I. Honkala and T. Laihonen},
-    journal = {European Journal of Combinatorics},
-    year = {2006},
-    pages = {218--227},
-    volume = {27}
-}
-@article{honk06d,
-    title = {On identifying codes that are robust against edge changes},
-    author = {I. Honkala and T. Laihonen},
-    journal = {Information and Computation},
-    year = {2007},
-    pages = {1078--1095},
-    volume = {205}
 }
 @article{honk06c,
     title = {On identifying codes in the king grid that are robust against edge deletions},
@@ -2650,15 +2716,6 @@
     year = {2019},
     pages = {83--102},
     volume = {767}
-}
-@article{hudr20z,
-    title = {Some rainbow problems in graphs have complexity equivalent to satisfiability problems},
-    author = {O. Hudry and A. Lobstein},
-    journal = {International Transactions in Operational Research},
-    year = {2022},
-    pages = {1547--1572},
-    volume = {29},
-    number = {3}
 }
 @article{inay21,
     title = {The locating chromatic number of book graph},
@@ -2779,14 +2836,6 @@
     pages = {354--368},
     volume = {242}
 }
-@article{junn16,
-    title = {Information retrieval with varying number of input clues},
-    author = {V. Junnila and T. Laihonen},
-    journal = {IEEE Transactions on Information Theory},
-    year = {2016},
-    pages = {625--638},
-    volume = {IT-62}
-}
 @article{junn16a,
     title = {Minimum number of input clues in robust information retrieval},
     author = {V. Junnila and T. Laihonen},
@@ -2810,21 +2859,6 @@
     journal = {Advances in Applied Mathematics},
     year = {2020},
     volume = {112}
-}
-@article{junn19j,
-    title = {On a conjecture regarding identification in Hamming graphs},
-    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2019},
-    volume = {26},
-    number = {2}
-}
-@article{junn20i,
-    title = {New results on codes for location in graphs},
-    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
-    journal = {Proceedings of Russian Finnish Symposium on Discrete Mathematics},
-    year = {2019},
-    pages = {105--116}
 }
 @article{junn21q,
     title = {On Levenshtein's channel and list size in information retrieval},
@@ -3021,14 +3055,6 @@
     pages = {825--834},
     volume = {18}
 }
-@article{laih06b,
-    title = {On robust identification in the square and king grids},
-    author = {T. Laihonen},
-    journal = {Discrete Applied Mathematics},
-    year = {2006},
-    pages = {2499--2510},
-    volume = {154}
-}
 @article{laih06a,
     title = {Optimal $t$-edge-robust $r$-identifying codes in the king lattice},
     author = {T. Laihonen},
@@ -3086,14 +3112,6 @@
     publisher = {Springer-Verlag},
     pages = {82--91}
 }
-@article{laih02b,
-    title = {Families of optimal codes for strong identification},
-    author = {T. Laihonen and S. Ranto},
-    journal = {Discrete Applied Mathematics},
-    year = {2002},
-    pages = {203--213},
-    volume = {121}
-}
 @article{laih07,
     title = {Codes identifying sets of binary words with large radii},
     author = {T. Laihonen and S. Ranto},
@@ -3109,14 +3127,6 @@
     year = {2000},
     pages = {269--288},
     volume = {243}
-}
-@mastersthesis{lane06,
-    title = {Trees with unique minimum locating-dominating sets},
-    author = {S. M. Lane},
-    school = {East Tennessee State University},
-    year = {2006},
-    pages = {72},
-    address = {Tennessee, USA}
 }
 @article{li08,
     title = {Bounds for fault-tolerant locating-dominating sets},
@@ -3273,14 +3283,6 @@
     pages = {983--1003},
     volume = {6}
 }
-@article{mull09,
-    title = {Identifying and locating-dominating codes in (random) geometric networks},
-    author = {T. M\"{u}ller and J. S. Sereni},
-    journal = {Combinatorics, Probability and Computing},
-    year = {2009},
-    pages = {925--952},
-    volume = {18}
-}
 @article{murt19,
     title = {Locating-dominating sets of functigraphs},
     author = {M. Murtaza and M. Fazil and I. Javaid},
@@ -3417,14 +3419,6 @@
     year = {2010},
     pages = {56--59},
     volume = {369}
-}
-@article{payn80,
-    title = {Identification keys and diagnostic tables: a review},
-    author = {R. W. Payne and D. A. Preece},
-    journal = {Journal of the Royal Statistical Society, Series A},
-    year = {1980},
-    pages = {253--292},
-    volume = {143}
 }
 @article{pelt10,
     title = {New bounds for $(r,\leq 2)$-identifying codes in the infinite king grid},
@@ -4217,6 +4211,20 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @inproceedings{argi14a,
     title = {On identifying code polyhedra of families of suns},
     author = {G. R. Argiroffo and S. M. Bianchi and A. K. Wagler},
@@ -4394,4 +4402,26 @@
     year = {2012},
     volume = {19},
     number = {1}
+}
+@article{fouc14,
+    title = {On graph identification problems and the special case of identifying vertices using paths},
+    author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
+    journal = {Lecture Notes in Computer Science},
+    year = {2012},
+    pages = {32--45}
+}
+@article{junn20i,
+    title = {New results on codes for location in graphs},
+    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
+    journal = {Proceedings of Russian Finnish Symposium on Discrete Mathematics},
+    year = {2019},
+    pages = {105--116}
+}
+@mastersthesis{lane06,
+    title = {Trees with unique minimum locating-dominating sets},
+    author = {S. M. Lane},
+    school = {East Tennessee State University},
+    year = {2006},
+    pages = {72},
+    address = {Tennessee, USA}
 }
